--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,16 @@
+.header {
+    text-align: center;
+    background-color: rgb(255, 145, 0);
+    border-radius: 4px;
+    padding: 20px;
+    margin-bottom: 10px;
+}
+
 .logo {
+    margin: 0;
     display: inline-block;
     width: auto;
     height: 1em;
     margin-right: 0.3em;
 }
+
