--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Open Sans', sans-serif;
-  background-color: rgb(92, 92, 92);
+  font-family: 'Montserrat', sans-serif;
+  background-color: rgb(0, 1, 27);
+  margin: 50px;
+}
+
+h1 {
+  margin: 0;
 }
 
