--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,14 @@
 html {
   font-family: 'Montserrat', sans-serif;
   background-color: rgb(0, 1, 27);
-  margin: 50px;
+  margin: 10px;
+}
+
+@media screen and (min-width: 600px) {
+  html {
+    margin: 30px;
+}
+  
 }
 
 h1 {
